# bpmn-robots-gui

./: .gitignore  package.xml
gui/: CMakeLists.txt  package.xml
gui_core/: CMakeLists.txt  package.xml
gui_core/launch/: gui.launch
gui_core/src/: gui_models.py  main.py  main.pyproject  main_window.ui  models.py
gui_dummy_nodes/: CMakeLists.txt  package.xml
gui_dummy_nodes/src/: dummy_input_handler_node.py  dummy_signal_handler.py  dummy_signal_handler_node.py  dummy_start_mission_node.py
gui_msgs/: CMakeLists.txt  package.xml
gui_msgs/msg/: GuiData.msg  Variable.msg
gui_msgs/srv/: InputRequest.srv  InputResponse.srv  ProvideUserInput.srv  RequestUserInput.srv  SignalList.srv  SignalSend.srv  StartMission.srv  StartSignal.srv
